# smart-home-core

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  docker-compose.yml
cmake/: DownloadVosk.cmake  DownloadVoskModel.cmake
core/: CMakeLists.txt  main.cpp
core/include/stt/: stt.h
core/src/: main.cpp
core/src/stt/: stt.cpp
http-server/: CMakeLists.txt  CMakePresets.json  Dockerfile
proto/: stt.proto
stt-server/: CMakeLists.txt  CMakePresets.json
stt-server/cmake/: CompileProto.cmake  DownloadVosk.cmake  DownloadVoskModel.cmake
stt-server/src/: stt-main.cpp
stt-server/src/stt/: stt.cpp
